update character error handling
